Fix fonts overlapping with computed styles
Fixed: 1339733
Reviewed-on: https://chromium-review.googlesource.com/c/devtools/devtools-frontend/+/3736390
Commit-Queue: Ergün Erdoğmuş <ergunsh@chromium.org>

--- a/front_end/panels/elements/computedStyleSidebarPane.css
+++ b/front_end/panels/elements/computedStyleSidebarPane.css
@@ -37,3 +37,7 @@
     border: 1px solid ButtonText;
   }
 }
+
+.styles-sidebar-computed-style-widget {
+  min-height: auto;
+}
